--- a/style.css
+++ b/style.css
@@ -3,30 +3,34 @@
     padding: 0;
     box-sizing: border-box;
 }
-.nav{
-    gap: 20px;
-}
-.first-sec{
-    justify-content: space-between;
-    padding: 10px;
+.f-1{
+  font-size: 0.875rem;
 }
 .header-sec{
     background: url(images/bgimg.png);
-    height: 500px;
     background-size: 100% 100%;
 } 
+.nav-link{
+  position: relative;
+}
+.nav-link::before{
+    content: "";
+    background-color: rgb(255, 81, 0);
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    border-radius: 5px;
+    transition:all 0.5s ease;
+    transform: scaleX(0);
+}
+.nav-link:hover::before{
+  transform: scaleX(1);
+}
 .color{
     color: #94c75e;
-} 
-.lo{
-    margin-top: -5px;
-} 
-.gb{
-    margin-left: 20px;
-}
-.img2{
-    width: 500px;
-}
+}  
 .w-100{
     width: 100%;
 }
@@ -39,24 +43,20 @@ p{
     margin: 0;
 }
 .search{
-    border-radius: 0px 6px 6px 0px;
-    width: 100px;
+    border-radius:0px 6px 6px 0px;
+    height: 38px;
 }
 .second-sec{
     width: 100%;
     height: 60%;
 }
 .container{
-    width: 1200px;
-}
-.container-1{
-    width: 680px;
+    height: 100%;
 }
 .form-control-sm{
-    width: 400px;
     border: none;
     height: 38px;
-    border-radius: 6px 0px 0px 6px;
+    border-radius:6px 0px 0px 6px;
 }
 .img1{
     height: 20px;
@@ -65,14 +65,6 @@ p{
 
 .body-con{
     width: 650px;
-}
-.butt{
-    height: 40px;
-    width: 200px;
-}
-.img3{
-    height: 200px;
-    width: 200px;
 }
 .fet1{
     background: url(images/holt.jpg);
@@ -90,13 +82,13 @@ p{
     background-color: rgb(255, 81, 0);
     color: white;
 }
+.or{
+  width: 150px;
+  height: 40px;
+}
 .btn-or:hover{
     background-color: rgb(255, 81, 0);
     color: white;
-}
-.fet{
-    width: 170px;
-    height: 200px;
 }
 .fet2{
     border-bottom: 1px solid lightgray;
@@ -123,29 +115,22 @@ p{
   .content{
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(15px);
-    height: 300px;
-    width: 600px;
+  }
+  .ind{
+    height: 30px;
+    overflow: hidden;
+  }
+  .ind1{
+    height: 60px;
+    overflow: hidden;
   }
   .cave{
-    height: 418px;
-    width: 780px;
     background: url(images/cave.jpg);
     background-size: 100% 100%;
   }
-  .ind{
-    height: 200px;
-    width: 370px;
-  }
-  .ind1{
-    height: 250px;
-    width: 550px;
-  }
-  .fs-12{
-    font-size: 13px;
-  }
-  .op{
-    height:60px;
-    overflow: hidden;
+  .fs-12,
+  p{
+    font-size: 14px;
   }
   label{
     color: white;
@@ -157,40 +142,17 @@ p{
   .bg-mr{
     background-color: lightsalmon;
   }
-  .img4{
-    height: 200px;
-    width: 300px;
-  }
-  .img5{
-    height: 200px;
-    width: 270px;
-  }
-  .con1{
-    height: 430px;
-    width: 370px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .h1-100{
-    margin-top: 100px;
-    border: none;
-    border-radius: 6px;
-  }
   .foot{
     background-color: #fff;
     color: black;
-    height: 250px;
   }
   .in{
     border:1px solid gray;
-    height: 30px;
-    width:350px;
     background-color:aliceblue;
+    height: 40px;
   }
   .ul{
     list-style: none;
-  }
-  .con2{
-    width: 370px;
   }
   .hr {
     background-color: grey;
@@ -221,4 +183,70 @@ p{
   .call{
     text-decoration: none;
     color: white;
+  }
+  @media (min-width: 992px){
+    .form-control-sm{
+      width: 400px;
+    }
+  }
+  @media (min-width: 768px){
+    .container-1{
+      width: 680px;
+  }
+  .header-sec{
+    height: 500px;
+  }
+  .img2{
+    width:300px !important;
+  }
+  .form-control-sm{
+    margin-left: 9px;
+  }
+  .b-con{
+    margin-top: 10px;
+  }
+  }
+  @media (min-width:1200px){
+    .img2{
+      width:580px !important;
+    }
+  }
+  @media (max-width:1200px){
+    .img2{
+      width:400px !important;
+    }
+    .gb{
+      width: 100px !important;
+    }
+  }
+  @media (max-width: 768px){
+    .gb,
+    .ob{
+     font-size: 0.875rem;
+     padding: 5px; 
+    }
+    .navbar-nav{
+      gap:5px !important ;
+    }
+    .fet1,
+    .fet3,
+    .fet4{
+      height: 200px;
+    }
+    .img2{
+      width:300px !important ;
+    } 
+  }
+  @media (max-width:576px){
+    .cl{
+      margin-top: 10px;
+    }
+    .search,
+    .form-control-sm{
+      border-radius: 6px;
+    }
+    .end,
+    .tc{
+      text-align: center;
+    }
   }
