--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p{
 .second-sec{
     width: 100%;
     height: 60%;
-    /* display: none; */
+    display: none;
 }
 .container{
     height: 100%;
@@ -63,12 +63,13 @@ p{
     height: 20px;
     width: 20px;
 }
-/* .body-sec,
+.body-sec,
 .header-sec,
+.second-sec,
 #end,
 #footer{
   display: none;
-} */
+}
 .fet1{
     background: url(images/holt.jpg);
     background-size: 100% 100%;
