--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ html body {
     padding: 0;
     box-sizing: border-box;
 }
+.btn{
+  border: none;
+}
 .header-sec{
     background: url(images/bgimg.png);
-    background-size: 100% 100%;
-    
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;   
 } 
 .nav-link{
   position: relative;
@@ -30,15 +34,7 @@ html body {
   transform: scaleX(1);
 }
 .color{
-    color: rgb(151,203,95);
-}  
-.w-100{
-    width: 100%;
-}
-.ob{
-    border: none;
-    background: transparent;
-    color: white;
+    color: rgb(1,137,10);
 }
 p{
     margin: 0;
@@ -46,12 +42,6 @@ p{
 .search{
     border-radius:0px 6px 6px 0px;
     height: 38px;
-}
-.second-sec{
-    width: 100%;
-    height: 60%;
-    animation: 1s ease-out 0s 1 xload ;
-    display: none;
 }
 .container{
     height: 100%;
@@ -64,13 +54,6 @@ p{
 .img1{
     height: 20px;
     width: 20px;
-}
-.body-sec,
-.header-sec,
-#end,
-#footer{
-  display: none;
-  animation: 1s ease-out 0s 1 yload ;
 }
 .fet1{
     background: url(images/holt.jpg);
@@ -88,12 +71,8 @@ p{
     background-color: rgb(255, 81, 0);
     color: white;
 }
-.or{
-  width: 150px;
-  height: 40px;
-}
 .btn-or:hover{
-    background-color: rgb(255, 81, 0);
+    background-color: rgb(197, 67, 7);
     color: white;
 }
 .fet2{
@@ -110,15 +89,12 @@ p{
     bottom: -2px;
     left: 40%;
   }
-  .img2{
-    width: 600px;
-  }
   .btn-br{
     background-color: brown;
     color: white;
   }
   .btn-br:hover{
-    background-color: brown;
+    background-color: rgb(134, 35, 35);
     color: white;
   }
   .content{
@@ -160,10 +136,13 @@ p{
     background-color: rgb(1,137,10);
     color: #fff;
   }
+  .btn-gr:hover{
+    background-color: rgb(1, 107, 8);
+    color: #fff;
+  }
   .bg-gr{
     background-color: rgb(151,203,95);
     color: #fff;
-
   }
   .bg-mr{
     background-color: lightsalmon;
@@ -196,7 +175,7 @@ p{
   }
   .hl {
     background-color: grey;
-    height: 1.5px;
+    height: 1px;
     width: 100%;
   }
   .img6{
@@ -220,11 +199,6 @@ p{
   @media (min-width: 992px){
     .form-control-sm{
       width: 400px;
-    }
-  }
-  @media (max-width:1200px){
-    .img2{
-      width: 350px;
     }
   }
   @media (min-width: 768px){
@@ -282,23 +256,4 @@ p{
     .nav-item{
       padding-left: 10px;
     }
-    .img2{
-      width: 300px;
-    }
-  }
-  @keyframes xload{
-    0%{
-      transform: translateX(-40%);
-    }
-    100%{
-      transform: translateX(0);
-    }
-  }
-  @keyframes yload{
-    0%{
-      transform: translateY(-40%);
-    }
-    100%{
-      transform: translateY(0);
-    }
-  }
+  } 
